base.html edited

--- a/todoApp/templates/todoApp/home.html
+++ b/todoApp/templates/todoApp/home.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %} {% block title %}
 <title>Home</title>
 {% endblock title %} {% block home %}
-<div class="px-5 py-6 shadow-md rounded-lg mx-auto h-full bg-gray-100 dark:bg-slate-700">
-  <div class="mb-5">
-    <h1 class="text-center font-bold text-xl uppercase">Django - Tailwind Todo App</h1>
-  </div>
+<div class="px-5 py-4 shadow-md mx-auto bg-gradient-to-r from-cyan-600 to-green-600 mb-5">
   <div>
-    <h2>this is a sample note</h2>
+    <h1 class="font-bold text-xl uppercase">Django - Tailwind Todo App</h1>
   </div>
+</div>
+
+<div class="bg-slate-700 rounded-lg px-10 py-5">
+    <h2>this is a note</h2>
 </div>
 {% endblock home %}
