--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 		{% tailwind_css %}
 	</head>
 
-	<body class="bg-gray-100 dark:bg-slate-800 leading-normal tracking-normal text-gray-800 dark:text-gray-200">
+	<body class="bg-slate-800 leading-normal tracking-normal text-gray-200">
 		<div class="px-10 py-16">
 			{% block home %}{% endblock home %}
 		</div>
