--- a/todoApp/templates/todoApp/home.html
+++ b/todoApp/templates/todoApp/home.html
@@ -1,13 +1,58 @@
 {% extends 'base.html' %} {% block title %}
 <title>Home</title>
 {% endblock title %} {% block home %}
-<div class="px-5 py-4 shadow-md mx-auto bg-gradient-to-r from-cyan-600 to-green-600 mb-5">
+<!-- this is the card head -->
+<div
+  class="px-5 py-4 shadow-md mx-auto bg-gradient-to-r from-cyan-600 to-green-600 mb-5"
+>
   <div>
     <h1 class="font-bold text-xl uppercase">Django - Tailwind Todo App</h1>
   </div>
 </div>
 
+<!-- this the list container -->
 <div class="bg-slate-700 rounded-lg px-10 py-5">
-    <h2>this is a note</h2>
+  <!-- lists container -->
+  <div class="">
+    <!-- list items go here | This is where you use the for loop -->
+    <div
+      class="flex items-center justify-between py-2 text-gray-300 font-semibold"
+    >
+      <div>
+        <input
+          class="mr-5 rounded-full bg-slate-700"
+          type="checkbox"
+          id="taskCheck"
+          name="task"
+          value=""
+        />
+        <!-- insert the context data here -->
+        <label for="task" class="">This is task number one</label>
+      </div>
+      <div>
+        <form action="#" class="flex items-center">
+          {% csrf_token %}
+          <button type="submit">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6 stroke-gray-700 hover:stroke-gray-400 transition delay-100"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
+              />
+            </svg>
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <!-- end div -->
+  </div>
 </div>
 {% endblock home %}
