--- a/todoApp/templates/todoApp/home.html
+++ b/todoApp/templates/todoApp/home.html
@@ -11,7 +11,7 @@
 </div>
 
 <!-- this the list container -->
-<div class="bg-slate-700 rounded-lg px-10 py-5">
+<div class="bg-slate-700 rounded-lg px-10 py-5 shadow-lg">
   <!-- lists container -->
   <div class="">
     <!-- list items go here | This is where you use the for loop -->
@@ -52,7 +52,73 @@
       </div>
     </div>
 
+    <div
+      class="flex items-center justify-between py-2 text-gray-300 font-semibold"
+    >
+      <div>
+        <input
+          class="mr-5 rounded-full bg-slate-700"
+          type="checkbox"
+          id="taskCheck"
+          name="task"
+          value=""
+        />
+        <!-- insert the context data here -->
+        <label for="task" class="">Take out the trash</label>
+      </div>
+      <div>
+        <form action="#" class="flex items-center">
+          {% csrf_token %}
+          <button type="submit">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6 stroke-gray-700 hover:stroke-gray-400 transition delay-100"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
+              />
+            </svg>
+          </button>
+        </form>
+      </div>
+    </div>
     <!-- end div -->
+
+    <!-- add task form container -->
+      <form action="#" class="relative pt-3">
+        <input
+          class="w-full py-3 mb-4 inline-block rounded-lg bg-slate-600 border-none focus:border-none outline-0 font-semibold"
+          type="text"
+          name="taskInput"
+          id="taskInput"
+          placeholder="Your task here"
+        />
+        <button
+          class="absolute w-full flex justify-center items-center bg-green-600 hover:bg-green-700 transition delay-100 px-5 py-2 rounded-full font-semibold shadow-md shadow-green-800"
+          type="submit"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-5 w-5 mr-2"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
+              clip-rule="evenodd"
+            />
+          </svg>
+          New Task
+        </button>
+      </form>
+      <!-- end div -->
   </div>
 </div>
 {% endblock home %}
