--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,8 @@
 		</div>
 		
 		
-		<!-- <footer class="bg-gray-300 px-10 py-5">
+		<footer class="bg-slate-700 px-10 py-5">
 			<h4>Made by Mike Jerrson Galindez</h4>
-		</footer> -->
+		</footer>
 	</body>
 </html>
