--- a/todoApp/templates/todoApp/home.html
+++ b/todoApp/templates/todoApp/home.html
@@ -17,6 +17,7 @@
     <!-- lists container -->
     <div class="">
       <!-- list items go here | This is where you use the for loop -->
+      {% for item in all_items %}
       <div
         class="flex items-center justify-between py-2 text-gray-300 font-semibold"
       >
@@ -29,7 +30,7 @@
             value=""
           />
           <!-- insert the context data here -->
-          <label for="task" class="">This is task number one</label>
+          <label for="task" class="">{{ item.item }}</label>
         </div>
         <div>
           <form action="#" class="flex items-center">
@@ -53,53 +54,20 @@
           </form>
         </div>
       </div>
+      {% endfor %}
 
-      <div
-        class="flex items-center justify-between py-2 text-gray-300 font-semibold"
-      >
-        <div>
-          <input
-            class="mr-5 rounded-full bg-slate-700"
-            type="checkbox"
-            id="taskCheck"
-            name="task"
-            value=""
-          />
-          <!-- insert the context data here -->
-          <label for="task" class="">Take out the trash</label>
-        </div>
-        <div>
-          <form action="#" class="flex items-center">
-            {% csrf_token %}
-            <button type="submit">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-6 w-6 stroke-gray-700 hover:stroke-gray-400 transition delay-100"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-                stroke-width="2"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
-                />
-              </svg>
-            </button>
-          </form>
-        </div>
-      </div>
-      <!-- end div -->
+     
 
       <!-- add task form container -->
-      <form action="#" class="relative pt-3">
+      <form action="{% url 'todoApp:add-item' %}" class="relative pt-3" method="post">
+        {% csrf_token %}
         <input
           class="w-full py-3 mb-4 inline-block rounded-lg bg-slate-600 border-none focus:border-none outline-0 font-semibold"
           type="text"
           name="taskInput"
           id="taskInput"
           placeholder="Your task here"
+          autocomplete="off"
         />
         <button
           class="absolute w-full flex justify-center items-center bg-green-600 hover:bg-green-700 transition delay-100 px-5 py-2 rounded-full font-semibold shadow-md shadow-green-800"
