checkbox still needs fixing

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,22 @@
-{% load static tailwind_tags %}
+{% load static tailwind_tags %} {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		{% block title %}{% endblock title %}
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		{% tailwind_css %}
-	</head>
+  <head>
+    {% block title %}{% endblock title %}
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    {% tailwind_css %}
+  </head>
 
-	<body class="bg-slate-800 leading-normal tracking-normal text-gray-200">
-		<div class="px-10 py-16">
-			{% block home %}{% endblock home %}
-		</div>
-		
-		
-		<footer class="bg-slate-700 px-10 py-5">
-			<h4>Made by Mike Jerrson Galindez</h4>
-		</footer>
-	</body>
+  <body class="bg-slate-800 leading-normal tracking-normal text-gray-200">
+    <div class="px-10 py-16">{% block home %}{% endblock home %}</div>
+
+    <footer class="bg-slate-700 px-10 py-5">
+      <h4>Made by Mike Jerrson Galindez</h4>
+    </footer>
+
+	<!-- this is the script link -->
+    <script src="{% static 'js/base.js' %}"></script>
+  </body>
 </html>
