models for the todoApp changed

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,12 +10,11 @@
   </head>
 
   <body class="bg-slate-800 leading-normal tracking-normal text-gray-200">
-    <div class="px-10 py-16">{% block home %}{% endblock home %}</div>
+    <div class="px-10 py-16">{% block content %}{% endblock content %}</div>
 
     <footer class="bg-slate-700 px-10 py-5">
       <h4>Made by Mike Jerrson Galindez</h4>
     </footer>
-
 
   </body>
 </html>
