--- a/todoApp/templates/todoApp/home.html
+++ b/todoApp/templates/todoApp/home.html
@@ -8,7 +8,8 @@
     class="px-5 py-4 shadow-md bg-gradient-to-r from-cyan-600 to-green-600 mb-5"
   >
     <div>
-      <h1 class="font-bold text-xl uppercase">{% now "jS F Y" %}</h1>
+      <h1 class="font-bold text-xl">Hello User!</h1>
+      <h2 class="font-semibold text-md">{% now "jS F Y" %}</h2>
     </div>
   </div>
 
@@ -20,18 +21,17 @@
       {% for item in all_items %}
       <div
         class="flex items-center justify-between py-2 text-gray-300 font-semibold px-10 transition delay-150"
-        id="list-item-container"
       >
         <div>
-          <input
+          <!-- <input
             class="mr-5 rounded-full bg-slate-700 task-check"
             type="checkbox"
             id="task-check"
             name="task"
             value=""
-          />
+          /> -->
           <!-- insert the context data here -->
-          <label for="task" id="task-label" class="">{{ item.item }}</label>
+          <h3 id="task-label" class="">{{ item.item }}</h3>
         </div>
         <div>
           <form
@@ -78,7 +78,7 @@
             required
           />
           <button
-            class="absolute w-full flex justify-center items-center bg-green-600 hover:bg-green-700 transition delay-100 px-5 py-2 rounded-full font-semibold shadow-md shadow-green-800"
+            class="absolute w-full flex justify-center items-center bg-green-600 hover:bg-green-500 transition delay-100 px-5 py-2 rounded-full font-semibold shadow-md shadow-green-800"
             type="submit"
           >
             <svg
