--- a/loginApp/templates/loginApp/register.html
+++ b/loginApp/templates/loginApp/register.html
@@ -3,5 +3,11 @@
     <title>Register</title>
 {% endblock title %}
 {% block content %}
-    This is the register page
+    <div class="bg-slate-700 rounded-lg shadow-lg text-gray-300 py-10 px-8">
+    <form action="{% url 'loginApp:register' %}" method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Register" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+    </form>
+    </div>
 {% endblock content %}
