--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -1,3 +1,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/*These targets the password1 and password2 fields in the register template*/
+input#id_password1{
+    @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
+}
+
+input#id_password2{
+    @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
+}
+
+/*This target the ul of items for password field*/
+.register-form > ul{
+    @apply text-xs;
+}
+
+/*this targets the helptext span items*/
+.helptext{
+    @apply text-xs;
+}
+
+/*this targets the labels in the register form*/
+.register-form > p{
+    @apply mb-4;
+}
+.register-form > label{
+    @apply block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300;
+}
+
+
+
+
