--- a/loginApp/templates/loginApp/register.html
+++ b/loginApp/templates/loginApp/register.html
@@ -9,5 +9,8 @@
         {{ form.as_p }}
         <input type="submit" value="Register" class="mt-4 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
     </form>
+    <h2
+          class="text-sm text-gray-900 mt-4 dark:text-gray-300"
+          >Already have an account? <a href="{% url 'loginApp:login' %}" class="text-blue-600 hover:underline dark:text-blue-500">Login</a></h2>
     </div>
 {% endblock content %}
