--- a/loginApp/templates/loginApp/login.html
+++ b/loginApp/templates/loginApp/login.html
@@ -2,42 +2,10 @@
 <title>Login</title>
 {% endblock title %} {% block content %}
 <div class="bg-slate-700 rounded-lg shadow-lg text-gray-300 py-10 px-8">
-  <form>
-    <div class="mb-6">
-      <label
-        for="email"
-        class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-        >Your username</label
-      >
-      <input
-        type="email"
-        id="email"
-        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-        placeholder="name@flowbite.com"
-        required="True"
-        autocomplete="off"
-      />
-    </div>
-    <div class="mb-6">
-      <label
-        for="password"
-        class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-        >Your password</label
-      >
-      <input
-        type="password"
-        id="password"
-        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-        required="True"
-      />
-    </div>
-    <div class="flex items-start mb-6">
-      <div class="text-sm">
-        <h2
-          for="remember"
-          class="font-medium text-gray-900 dark:text-gray-300"
-          >Don't have an account yet? <a href="{% url 'loginApp:register' %}" class="text-blue-600 hover:underline dark:text-blue-500">Register now</a></h2>
-      </div>
+  <form action="{% url 'loginApp:login' %}" method="POST">
+      {% csrf_token %}
+    <div>
+        {{ form.as_p }}
     </div>
     <button
       type="submit"
