--- a/todoApp/templates/todoApp/home.html
+++ b/todoApp/templates/todoApp/home.html
@@ -5,11 +5,14 @@
 
   <!-- this is the card head -->
   <div
-    class="px-10 py-4 shadow-md bg-gradient-to-r from-cyan-600 to-green-600 mb-5"
+    class="px-10 py-4 shadow-md bg-gradient-to-r from-cyan-600 to-green-600 mb-5 flex items-center justify-between"
   >
     <div>
       <h1 class="font-bold text-xl">Hello User</h1>
       <h2 class="font-semibold text-md">{% now "jS F Y" %}</h2>
+    </div>
+    <div>
+        <a href="{% url 'todoApp:logout' %}" class="font-medium">Logout</a>
     </div>
   </div>
 
