--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -35,6 +35,10 @@ input#id_password2{
     @apply text-red-500 font-semibold;
 }
 
+/*this targets the login form username and password fields*/
+#id_username, #id_password{
+    @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
+}
 
 
 
