--- a/loginApp/templates/loginApp/login.html
+++ b/loginApp/templates/loginApp/login.html
@@ -6,7 +6,7 @@
     <div class="mb-4">
         {% for message in messages %}
             <div class="p-4 text-sm text-red-700 bg-red-100 rounded-lg dark:bg-red-200 dark:text-red-800" role="alert">
-                <span class="font-medium">{{ message.success }}</span>
+                <span class="font-medium">{{ message}}</span>
             </div>
         {% endfor %}
     </div>
