--- a/todoApp/templates/todoApp/home.html
+++ b/todoApp/templates/todoApp/home.html
@@ -8,7 +8,7 @@
     class="px-10 py-4 shadow-md bg-gradient-to-r from-cyan-600 to-green-600 mb-5 flex items-center justify-between"
   >
     <div>
-      <h1 class="font-bold text-xl">Hello User</h1>
+      <h1 class="font-bold text-xl">Hello {{ request.user.id }}</h1>
       <h2 class="font-semibold text-md">{% now "jS F Y" %}</h2>
     </div>
     <div>
@@ -72,6 +72,7 @@
           method="post"
         >
           {% csrf_token %}
+            <input type="hidden" value="{{ request.user.id }}" name="targetId" id="targetId">
           <input
             class="w-full py-3 mb-4 inline-block rounded-lg bg-slate-600 focus:outline-0 font-semibold"
             type="text"
