--- a/todoApp/templates/todoApp/home.html
+++ b/todoApp/templates/todoApp/home.html
@@ -8,7 +8,7 @@
     class="px-10 py-4 shadow-md bg-gradient-to-r from-cyan-600 to-green-600 mb-5 flex items-center justify-between"
   >
     <div>
-      <h1 class="font-bold text-xl">Hello {{ request.user.id }}</h1>
+      <h1 class="font-bold text-xl">Hello {{ request.user.username }}</h1>
       <h2 class="font-semibold text-md">{% now "jS F Y" %}</h2>
     </div>
     <div>
