--- a/loginApp/templates/loginApp/login.html
+++ b/loginApp/templates/loginApp/login.html
@@ -5,9 +5,15 @@
 {% if messages %}
     <div class="mb-4">
         {% for message in messages %}
-            <div class="p-4 text-sm text-red-700 bg-red-100 rounded-lg dark:bg-red-200 dark:text-red-800" role="alert">
-                <span class="font-medium">{{ message}}</span>
-            </div>
+            {% if message.tags == 'error' %}
+                <div class="p-4 text-sm text-red-700 bg-red-100 rounded-lg dark:bg-red-200 dark:text-red-800" role="alert">
+                <span class="font-medium">{{ message }}</span>
+                </div>
+            {% elif message.tags == 'success' %}
+                <div class="p-4 mb-4 text-sm text-green-700 bg-green-100 rounded-lg dark:bg-green-200 dark:text-green-800" role="alert">
+                <span class="font-medium">{{ message }}</span>
+                </div>
+            {% endif %}
         {% endfor %}
     </div>
 {% endif %}
