base.html, login and register pages light mode colors added

--- a/loginApp/templates/loginApp/login.html
+++ b/loginApp/templates/loginApp/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block title %}
 <title>Login</title>
 {% endblock title %} {% block content %}
-<div class="bg-slate-700 rounded-lg shadow-lg text-gray-300 py-10 px-8">
+<div class="bg-gray-200 rounded-lg shadow-lg text-gray-300 py-10 px-8 dark:bg-slate-700">
 {% if messages %}
     <div class="mb-4">
         {% for message in messages %}
