--- a/templates/base.html
+++ b/templates/base.html
@@ -9,21 +9,21 @@
     {% tailwind_css %}
   </head>
 
-  <body class="bg-slate-800 leading-normal tracking-normal text-gray-200">
+  <body class="bg-gray-100 leading-normal tracking-normal text-gray-200 dark:bg-slate-800">
     <div class="px-10 py-16">
       <div class="min-h-screen md:px-24 lg:px-44">
       {% block content %}{% endblock content %}
       </div>
     </div>
 
-    <footer class="bg-slate-700 px-10 py-5">
+    <footer class="bg-gray-200 text-gray-600 font-medium px-10 py-5 dark:bg-slate-700 dark:text-gray-200">
       <h4>Made by Mike Jerrson Galindez</h4>
          <div class="flex mt-2">
           <a href="https://github.com/miker-bice" class="github">
             <!-- this is the github icon -->
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              class="fill-gray-800 mr-2 dark:fill-gray-200"
+              class="fill-gray-700 mr-2 dark:fill-gray-200"
               width="24"
               height="24"
               viewBox="0 0 24 24"
@@ -37,7 +37,7 @@
             <!-- this is the facebook icon -->
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              class="fill-gray-800 mr-2 dark:fill-gray-200"
+              class="fill-gray-700 mr-2 dark:fill-gray-200"
               width="24"
               height="24"
               viewBox="0 0 24 24"
@@ -51,7 +51,7 @@
             <!-- this is the linkedin icon -->
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              class="fill-gray-800 mr-2 dark:fill-gray-200"
+              class="fill-gray-700 mr-2 dark:fill-gray-200"
               width="24"
               height="24"
               viewBox="0 0 24 24"
