--- a/loginApp/templates/loginApp/register.html
+++ b/loginApp/templates/loginApp/register.html
@@ -3,7 +3,7 @@
     <title>Register</title>
 {% endblock title %}
 {% block content %}
-    <div class="bg-slate-700 rounded-lg shadow-lg text-gray-300 py-10 px-8">
+    <div class="bg-gray-200 rounded-lg shadow-lg text-gray-300 py-10 px-8 dark:bg-slate-700">
     <form action="{% url 'loginApp:register' %}" method="POST" class="register-form">
         {% csrf_token %}
         {{ form.as_p }}
