home styling light mode adjusted

--- a/todoApp/templates/todoApp/home.html
+++ b/todoApp/templates/todoApp/home.html
@@ -5,7 +5,7 @@
 
   <!-- this is the card head -->
   <div
-    class="px-10 py-4 shadow-md bg-gradient-to-r from-cyan-600 to-green-600 mb-5 flex items-center justify-between"
+    class="px-10 py-4 shadow-md bg-gradient-to-r from-cyan-500 to-green-500 dark:bg-gradient-to-r from-cyan-600 to-green-600 mb-5 flex items-center justify-between"
   >
     <div>
       <h1 class="font-bold text-xl">Hello {{ request.user.username }}</h1>
@@ -17,7 +17,7 @@
   </div>
 
   <!-- this the list container -->
-  <div class="bg-slate-700 rounded-lg py-5 shadow-lg">
+  <div class="bg-gray-200 rounded-lg py-5 shadow-lg dark:bg-slate-700">
     <!-- lists container -->
     <div class="">
       <!-- list items go here | This is where you use the for loop -->
