--- a/todoApp/templates/todoApp/includes/item.html
+++ b/todoApp/templates/todoApp/includes/item.html
@@ -1,5 +1,5 @@
       <div
-        class="flex items-center justify-between py-2 text-gray-300 font-semibold px-10 transition delay-150 hover:bg-slate-600"
+        class="flex items-center justify-between py-2 text-gray-500 font-semibold px-10 transition delay-150 hover:bg-gray-300 dark:hover:bg-slate-600 dark:text-gray-300"
       >
         <div class="flex items-center">
 
@@ -22,7 +22,7 @@
             <button type="submit">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                class="h-6 w-6 stroke-gray-700 hover:stroke-gray-400 transition delay-100"
+                class="h-6 w-6 stroke-gray-200 hover:stroke-gray-500  transition delay-100 dark:stroke-gray-700 dark:hover:stroke-gray-400"
                 fill="none"
                 viewBox="0 0 24 24"
                 stroke="currentColor"
