--- a/todoApp/templates/todoApp/home.html
+++ b/todoApp/templates/todoApp/home.html
@@ -35,7 +35,7 @@
           {% csrf_token %}
             <input type="hidden" value="{{ request.user.id }}" name="targetId" id="targetId">
           <input
-            class="w-full py-3 mb-4 inline-block rounded-lg bg-slate-600 focus:outline-0 font-semibold"
+            class="w-full py-3 mb-4 inline-block rounded-lg text-gray-500 focus:outline-0 font-semibold dark:bg-slate-600"
             type="text"
             name="taskInput"
             id="taskInput"
@@ -44,7 +44,7 @@
             required
           />
           <button
-            class="absolute w-full flex justify-center items-center bg-green-600 hover:bg-green-500 transition delay-100 px-5 py-2 rounded-full font-semibold shadow-green-800 shadow-md hover:shadow-lg hover:shadow-green-800"
+            class="absolute w-full flex justify-center items-center bg-green-400 hover:bg-green-500 hover:shadow-lg transition delay-100 px-5 py-2 rounded-full font-semibold dark:bg-green-600 dark:shadow-green-800 shadow-md dark:hover:shadow-lg dark:hover:shadow-green-800"
             type="submit"
           >
             <svg
