--- a/todoApp/templates/todoApp/task.html
+++ b/todoApp/templates/todoApp/task.html
@@ -3,7 +3,7 @@
     <title>Todo</title>
 {% endblock title %}
 {% block content %}
-   <div class="bg-slate-700 rounded-lg shadow-lg text-gray-300 py-10 px-10">
+   <div class="bg-gray-200 rounded-lg shadow-lg text-gray-300 py-10 px-10 dark:bg-slate-700">
         <div>
             <a href="{% url 'todoApp:home' %}" class="">
                 <svg class="w-6 h-6 mb-4 text-green-500 transition delay-200 hover:text-green-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
