styling for empty state done

--- a/todoApp/templates/todoApp/includes/item-emty.html
+++ b/todoApp/templates/todoApp/includes/item-emty.html
@@ -6,7 +6,7 @@
       xmlns="http://www.w3.org/2000/svg"
       xmlns:xlink="http://www.w3.org/1999/xlink"
       viewBox="0 0 1080 1080"
-      class="w-4/12 ml-auto mr-auto"
+      class="w-1/2 sm:w-4/12 ml-auto mr-auto"
     >
       <defs>
         <style>
@@ -197,6 +197,6 @@
         </g>
       </g>
     </svg>
-    <h2 class="">Your list is as empty as space, try adding a task</h2>
+    <h2 class="font-normal mb-4">Your list is as empty as space, try adding a task</h2>
   </div>
 </div>
