--- a/todoApp/templates/todoApp/home.html
+++ b/todoApp/templates/todoApp/home.html
@@ -5,7 +5,7 @@
 
   <!-- this is the card head -->
   <div
-    class="px-10 py-4 shadow-md bg-gradient-to-r from-cyan-500 to-green-500 dark:bg-gradient-to-r from-cyan-600 to-green-600 mb-5 flex items-center justify-between"
+    class="px-10 py-4 shadow-md bg-gradient-to-r from-cyan-500 to-green-500 mb-5 flex items-center justify-between"
   >
     <div>
       <h1 class="font-bold text-xl">Hello {{ request.user.username }}</h1>
@@ -37,7 +37,7 @@
           {% csrf_token %}
             <input type="hidden" value="{{ request.user.id }}" name="targetId" id="targetId">
           <input
-            class="w-full py-3 mb-4 inline-block rounded-lg text-gray-500 focus:outline-0 font-semibold dark:bg-slate-600"
+            class="w-full py-3 mb-4 inline-block rounded-lg text-gray-500 focus:outline-0 font-semibold dark:bg-slate-600 dark:text-gray-300"
             type="text"
             name="taskInput"
             id="taskInput"
