experiment for django static production build start

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     {% tailwind_css %}
+{#    <link rel="stylesheet" href="{% static 'css/styles.css' %}">#}
   </head>
 
   <body class="bg-gray-100 leading-normal tracking-normal text-gray-200 dark:bg-slate-800">
